Fix missing color

--- a/css/main.css
+++ b/css/main.css
@@ -13,26 +13,26 @@ html {
 
 .btn-ghost {
   color: #b4fff4;
-  border-color: #b4fff4;
+  border-color: #90ccc3;
   border-radius: 10px;
   padding-bottom: 1em;
 }
 
 .btn-ghost:hover {
   color: #b4fff4;
-  border-color: #b4fff4;
+  border-color: #90ccc3;
   background-color: rgba(180, 255, 244, .2);
 }
 
 .btn-ghost:active,
 .btn-ghost:focus {
   color: #b4fff4;
-  border-color: #b4fff4;
+  border-color: #90ccc3;
   background-color: rgba(180, 255, 244, .2);
 }
 
 .btn-ghost::after {
-  content: ' ';
+  content: " ";
   border-bottom: 3px solid #b4fff4;
   position: absolute;
   top: 3rem;
@@ -41,7 +41,7 @@ html {
 }
 
 .btn-ghost:active {
-  padding-bottom: .75em
+  padding-bottom: .75em;
 }
 
 .btn-ghost .icon {
